--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Designers Workroom - Bespoke Interior Design & Premium Decor</title>
-    <meta name="description" content="Discover Designers Workroom, a collaborative space for interior designers, architects, and artists to innovate and bring creative ideas to life." />
-    <meta name="keywords" content="interior design, architecture, creative space, designers, workroom, innovation, design studio, luxury, furniture, Delhi" />
-    <meta name="author" content="Designers Workroom" />
     <link rel="icon" type="image/png" href="/assets/ficon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Designers Workroom</title>
   </head>
   <body>
     <div id="root"></div>
