--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- 🔹 SEO Meta Tags -->
     <title>Designers Workroom - Bespoke Interior Design & Premium Decor</title>
     <meta name="description" content="Discover Designers Workroom, a collaborative space for interior designers, architects, and artists to innovate and bring creative ideas to life." />
     <meta name="keywords" content="interior design, architecture, creative space, designers, workroom, innovation, design studio, luxury, furniture, Delhi" />
     <meta name="author" content="Designers Workroom" />
+
+    <!-- 🔹 Open Graph (For Facebook, LinkedIn, Instagram) -->
+    <meta property="og:title" content="Designers Workroom - Interior Design & Decor" />
+    <meta property="og:description" content="Explore luxury home and office design solutions at Designers Workroom. A hub for interior designers, architects, and furniture artisans." />
+    <meta property="og:image" content="/assets/home.webp" />
+    <meta property="og:url" content="https://designersworkroom.in" />
+    <meta property="og:type" content="website" />
+
+    <!-- 🔹 Instagram Meta Tags -->
+    <meta property="og:site_name" content="designers_workroom" />
+    <meta property="og:image:width" content="1080" />
+    <meta property="og:image:height" content="1080" />
+    <meta property="og:image:type" content="image/jpeg" />
+
+    <!-- 🔹 Pinterest Meta Tags -->
+    <meta name="p:domain_verify" content="5c1f0f74ae29c00c3f10bdebd052e343" />
+    <meta name="pinterest-rich-pin" content="true" />
+    <meta property="og:rich_attachment" content="true" />
+
+    <!-- 🔹 Structured Data (Google Rich Results) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Designers Workroom",
+        "url": "https://designersworkroom.in",
+        "logo": "/assets/logo.png",
+        "description": "Designers Workroom is a collaborative space for interior designers, architects, and artists to innovate and create unique interiors.",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+919718858337",
+          "contactType": "customer service",
+          "areaServed": "IN",
+          "availableLanguage": "English"
+        },
+        "sameAs": [
+          "https://www.instagram.com/designers_workroom/",
+          "https://www.pinterest.com/designersworkroom/",
+          "https://www.facebook.com/designersworkroom"
+        ]
+      }
+    </script>
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/assets/ficon.png" />
   </head>
   <body>
