--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 
     <!-- 🔹 Open Graph (For Facebook, LinkedIn, Instagram) -->
     <meta property="og:title" content="Designers Workroom - Interior Design & Decor" />
-    <meta property="og:description" content="Explore luxury home and office design solutions at Designers Workroom. A hub for interior designers, architects, and furniture artisans." />
+    <meta property="og:description" content="Discover Designers Workroom, a collaborative space for interior designers, architects, and artists to innovate and bring creative ideas to life." />
     <meta property="og:image" content="/assets/home.webp" />
     <meta property="og:url" content="https://designersworkroom.in" />
     <meta property="og:type" content="website" />
