--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     
     <!-- 🔹 SEO Meta Tags -->
     <title>Designers Workroom - Bespoke Interior Design & Premium Decor</title>
-    <meta name="description" content="Discover Designers Workroom, a collaborative space for interior designers, architects, and artists to innovate and bring creative ideas to life." />
+    <meta name="description" content="Explore luxury home and office design solutions at Designers Workroom. A hub for interior designers, architects, and furniture artisans" />
     <meta name="keywords" content="interior design, architecture, creative space, designers, workroom, innovation, design studio, luxury, furniture, Delhi" />
     <meta name="author" content="Designers Workroom" />
 
