--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,13 +6,13 @@
     
     <!-- 🔹 SEO Meta Tags -->
     <title>Designers Workroom - Bespoke Interior Design & Premium Decor</title>
-    <meta name="description" content="Explore luxury home and office design solutions at Designers Workroom. A hub for interior designers, architects, and furniture artisans" />
+    <meta name="description" content="Explore luxury home and office design solutions at Designers Workroom. A hub of interior designers, architects, and furniture artisans" />
     <meta name="keywords" content="interior design, architecture, creative space, designers, workroom, innovation, design studio, luxury, furniture, Delhi" />
     <meta name="author" content="Designers Workroom" />
 
     <!-- 🔹 Open Graph (For Facebook, LinkedIn, Instagram) -->
     <meta property="og:title" content="Designers Workroom - Interior Design & Decor" />
-    <meta property="og:description" content="Discover Designers Workroom, a collaborative space for interior designers, architects, and artists to innovate and bring creative ideas to life." />
+    <meta property="og:description" content="Discover Designers Workroom, a collaborative space of interior designers, architects, and artists to innovate and bring creative ideas to life." />
     <meta property="og:image" content="/assets/home.webp" />
     <meta property="og:url" content="https://designersworkroom.in" />
     <meta property="og:type" content="website" />
@@ -36,7 +36,7 @@
         "name": "Designers Workroom",
         "url": "https://designersworkroom.in",
         "logo": "/assets/logo.png",
-        "description": "Designers Workroom is a collaborative space for interior designers, architects, and artists to innovate and create unique interiors.",
+        "description": "Explore luxury home and office design solutions at Designers Workroom. A hub of interior designers, architects, and furniture artisans.",
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+919718858337",
