--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,6 +56,8 @@
     <link rel="icon" type="image/png" href="/assets/ficon.png" />
   </head>
   <body>
+    <h1>Luxury Interior Design & Creative Workspaces</h1>
+    <h2>Discover Bespoke Decor & Architectural Excellence</h2>
     <div id="root"></div>
     <script type="module" src="main.jsx"></script>
   </body>
