--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,10 +54,23 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/assets/ficon.png" />
+    
+    <style>
+      .hidden-heading {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        border: 0;
+      }
+    </style>
   </head>
   <body>
-    <h1>Luxury Interior Design & Creative Workspaces</h1>
-    <h2>Discover Bespoke Decor & Architectural Excellence</h2>
+    <h1 class="hidden-heading">Luxury Interior Design & Architecture - Designers Workroom</h1>
+    <h2 class="hidden-heading">Custom Interiors, Furniture, and Bespoke Decor Solutions</h2>
     <div id="root"></div>
     <script type="module" src="main.jsx"></script>
   </body>
